<resources>
    <string name="app_name">Financing Assistant</string>
    <string name="title_home">Home</string>
    <string name="start_experience">Start Experience</string>
    <string name="title_noble_metal">Noble Metal</string>
    <string name="title_fund">Fund</string>
    <string name="title_stock">Stock</string>
    <string name="title_mine">Mine</string>
    <string name="icbc">ICBC</string>
    <string name="edit">Edit</string>
    <string name="refresh">Refresh</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="market_close">Closing</string>
    <string name="update_countdown">Update|%1$d S</string>
    <string name="updating">Updating</string>
    <string name="update_period">Update period</string>
    <string name="wifi" translatable="false">WIFI</string>
    <string name="second">Second</string>
    <string name="mobile">Mobile</string>
    <string name="restore">Restore</string>
    <string name="exchange_rate">Exchange rate</string>
    <string name="forex_calendar">Forex calendar</string>
    <string name="live_news">Live news</string>
    <string name="realtime_quotes">Realtime quotes</string>

    <string name="fx_open">Open</string>
    <string name="fx_close">Close</string>
    <string name="fx_amplitude">Amplitude</string>
    <string name="fx_volatility_range">Volatility Range</string>
    <string name="fx_low">Low</string>
    <string name="fx_high">High</string>
    <string name="icbc_noble_metal">ICBC Noble Metal</string>

    <string name="realtime">Realtime</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="curr_price">Current price</string>
    <string name="change">Change</string>
    <string name="lowest_price">Lowest price</string>
    <string name="highest_price">Highest price</string>
    <string name="bank_purchase_price">Bank buy price</string>
    <string name="bank_sell_price">Bank selling price</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
</resources>