<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_noble_metal"
        android:icon="@drawable/ic_noble_metal_black_24dp"
        android:title="@string/title_noble_metal" />

    <item
        android:id="@+id/navigation_fund"
        android:icon="@drawable/ic_fund_black_24dp"
        android:title="@string/title_fund" />

    <item
        android:id="@+id/navigation_stock"
        android:icon="@drawable/ic_stock_black_24dp"
        android:title="@string/title_stock" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_mine_black_24dp"
        android:title="@string/title_mine" />
</menu>