<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hexon.financing.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_noble_metal"
        android:name="com.hexon.financing.ui.noblemetal.NobleMetalFragment"
        android:label="@string/title_noble_metal"
        tools:layout="@layout/fragment_noble_metal" />

    <fragment
        android:id="@+id/navigation_fund"
        android:name="com.hexon.financing.ui.fund.FundFragment"
        android:label="@string/title_fund"
        tools:layout="@layout/fragment_fund" />

    <fragment
        android:id="@+id/navigation_stock"
        android:name="com.hexon.financing.ui.stock.StockFragment"
        android:label="@string/title_stock"
        tools:layout="@layout/fragment_stock" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.hexon.financing.ui.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>