<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="exchangeRate"
            type="com.hexon.repository.model.ExchangeRate" />
        <variable
            name="decimalFormat"
            type="java.text.DecimalFormat" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_blue_grey_900">

        <TextView
            android:id="@+id/fx_name"
            android:text="@{exchangeRate.mName, default=@string/updating}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            style="@style/ExchangeRateItem.Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fx_price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@{decimalFormat.format(exchangeRate.mCurrPrice)}"
                android:textColor="@{exchangeRate.mChange > 0f ? @color/red : (exchangeRate.mChange &lt; 0f ? @color/green : @color/white)}"
                style="@style/ExchangeRateItem.Price" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fx_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{decimalFormat.format(exchangeRate.mChange)}"
                    android:textColor="@{exchangeRate.mChange > 0f ? @color/red : (exchangeRate.mChange &lt; 0f ? @color/green : @color/white)}"
                    style="@style/ExchangeRateItem.Summary" />

                <TextView
                    android:id="@+id/fx_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{exchangeRate.mUpdateTime}"
                    style="@style/ExchangeRateItem.Summary" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_open"
                    style="@style/ExchangeRateItem.Summary" />

                <TextView
                    android:id="@+id/fx_open"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{decimalFormat.format(exchangeRate.mOpen)}"
                    style="@style/ExchangeRateItem.Summary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_close"
                    style="@style/ExchangeRateItem.Summary" />

                <TextView
                    android:id="@+id/fx_close"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{decimalFormat.format(exchangeRate.mClose)}"
                    style="@style/ExchangeRateItem.Summary" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_low"
                    style="@style/ExchangeRateItem.Summary" />

                <TextView
                    android:id="@+id/fx_low"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{decimalFormat.format(exchangeRate.mLowPrice)}"
                    style="@style/ExchangeRateItem.Summary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_high"
                    style="@style/ExchangeRateItem.Summary" />

                <TextView
                    android:id="@+id/fx_high"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{decimalFormat.format(exchangeRate.mHighPrice)}"
                    style="@style/ExchangeRateItem.Summary" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_amplitude"
                    style="@style/ExchangeRateItem.Summary" />

                <TextView
                    android:id="@+id/fx_amplitude"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{decimalFormat.format(exchangeRate.mAmplitudePercent)}"
                    style="@style/ExchangeRateItem.Summary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_volatility_range"
                    style="@style/ExchangeRateItem.Summary" />

                <TextView
                    android:id="@+id/fx_volatility_range"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{decimalFormat.format(exchangeRate.mVolatilityRange)}"
                    style="@style/ExchangeRateItem.Summary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>